# agent-knowledge-platform

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  compose.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  security.yml
apps/core/: README.md  package.json  tsconfig.json  tsconfig.test.json
apps/core/src/: app.ts  config.ts  entrypoint.ts  server.ts
apps/core/test/: app.test.ts  auth.test.ts  (+10 more)
apps/mcp-server/: README.md  package.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
contracts/internal/: worker-result.schema.json  worker-task.schema.json
docs/: README.md
docs/architecture/: external-integration.md  implementation-status.md  memory-knowledge-composition.md  multi-team-isolation.md  quantpilot-integration.md  system-overview.md  technical-design-v0.1.md
docs/governance/: knowledge-maintenance.md  trust-and-publication.md
docs/product/: web-console-and-onboarding.md
docs/protocols/: akep-v0.1.md
docs/reference/: http-api.md
docs/runbooks/: data-maintenance.md  external-system-onboarding.md  local-development.md  production-pilot.md
infra/docker/: core.Dockerfile  web.Dockerfile  web.nginx.conf
infra/postgres/: verify.sql
scripts/: check-docs.mjs  run-integration.mjs
workers/knowledge-worker/: README.md  pyproject.toml
workers/knowledge-worker/src/akep_worker/: __init__.py  __main__.py  contracts.py  handler.py
workers/knowledge-worker/tests/: test_worker.py
(+127 files in other folders)
